--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      	   	       <p>1.</p><a href="#about">About</a>
      	   	       <p>2.</p><a href="#block2">Projects</a>
      	   	       <p>3.</p><a href="#end">Contact</a>
-     	   	       <p></p><a target=_blank href="Social_links_portfolio.html" class="nacsoc"><p id="a">Social links</p></a>
+     	   	       <p></p><a href="Social_links_portfolio.html" class="nacsoc"><p id="a">Social links</p></a>
      	   </div>
      	   <div class="content">
      	   	  <p id=c style="font-size:180%">Hi, my name is</p>
@@ -16,7 +16,7 @@
      	   	  <p id=d style="font-size:500%">I build things for web.</p>
      	   </div>
      	   <div class="buttons" id="resbut">
-     	   <a target="_blank" href="Resume_portfolio.html"><b><p>Resume</p></b></a>
+     	   <a href="Resume_portfolio.html"><b><p>Resume</p></b></a>
      	   </div>
      	   <br>
      	   <div id="about">
