--- a/Resume_portfolio.html
+++ b/Resume_portfolio.html
@@ -5,6 +5,6 @@
       </head>
 
       <body>
-      	<img class="pic" src="reusme _1.png"width="45%"/>
+      	<img class="pic" src="Resume.png"width="45%"/>
       </body>
 </html>
